--- a/SmallPack/SmallPack.vcxproj
+++ b/SmallPack/SmallPack.vcxproj
@@ -158,6 +158,8 @@
     <ClCompile Include="CommunicationChannel\SmallPackCommunicationChannel.cpp" />
     <ClCompile Include="CommunicationChannel\SmallPackCommunicationChannelNonReliable.cpp" />
     <ClCompile Include="CommunicationChannel\SmallPackCommunicationChannelReliable.cpp" />
+    <ClCompile Include="Server\SmallPackServerCommunicationCenter.cpp" />
+    <ClCompile Include="Server\SmallPackServerCommunicationChannel.cpp" />
     <ClCompile Include="SmallPack.cpp" />
     <ClCompile Include="SmallPackCommunicationCenter.cpp" />
     <ClCompile Include="SmallPackMessageComposer.cpp" />
@@ -170,6 +172,8 @@
     <ClInclude Include="CommunicationChannel\SmallPackCommunicationChannel.h" />
     <ClInclude Include="CommunicationChannel\SmallPackCommunicationChannelNonReliable.h" />
     <ClInclude Include="CommunicationChannel\SmallPackCommunicationChannelReliable.h" />
+    <ClInclude Include="Server\SmallPackServerCommunicationCenter.h" />
+    <ClInclude Include="Server\SmallPackServerCommunicationChannel.h" />
     <ClInclude Include="SmallPackCommunicationCenter.h" />
     <ClInclude Include="SmallPackConfig.h" />
     <ClInclude Include="SmallPackMessageComposer.h" />
